--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-fitty": "^1.0.1",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@mheob/eslint-config": "^1.0.0",
