--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ef-calc",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -25,10 +26,5 @@
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
     "vite": "^3.0.8"
-  },
-  "prettier": "@mheob/prettier-config",
-  "eslint": {
-    "extends": "@mheob/eslint-config"
-  },
-  "license": "MIT"
+  }
 }
