style: use new style rules

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "tsc && vite build",
 		"dev": "vite",
 		"format": "prettier --write \"**/*.{cjs,js,jsx,ts,tsx,json,md,mdx,yml}\"",
+		"lint": "eslint src/**/*.{ts,tsx} --fix",
 		"preview": "vite preview"
 	},
 	"dependencies": {
