--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"devDependencies": {
 		"@mheob/eslint-config": "^2.1.2",
 		"@mheob/prettier-config": "^2.0.0",
+		"@mheob/tsconfig": "^1.0.1",
 		"@types/node": "^18.7.18",
 		"@types/react": "^18.0.20",
 		"@types/react-dom": "^18.0.6",
