--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "ef-calc",
-  "version": "0.0.0",
-  "private": true,
-  "license": "MIT",
-  "type": "module",
-  "scripts": {
-    "build": "tsc && vite build",
-    "dev": "vite",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-fitty": "^1.0.1",
-    "zustand": "^4.0.0"
-  },
-  "devDependencies": {
-    "@mheob/eslint-config": "^2.0.0",
-    "@mheob/prettier-config": "^1.2.0",
-    "@types/node": "^18.7.6",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.1",
-    "eslint": "^8.22.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.8"
-  }
+	"name": "ef-calc",
+	"version": "0.0.0",
+	"private": true,
+	"license": "MIT",
+	"type": "module",
+	"scripts": {
+		"build": "tsc && vite build",
+		"dev": "vite",
+		"format": "prettier --write \"**/*.{cjs,js,jsx,ts,tsx,json,md,mdx,yml}\"",
+		"lint": "eslint src/**/*.{ts,tsx} --fix",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-fitty": "^1.0.1",
+		"zustand": "^4.1.1"
+	},
+	"devDependencies": {
+		"@mheob/eslint-config": "^2.1.2",
+		"@mheob/prettier-config": "^2.0.0",
+		"@mheob/tsconfig": "^1.0.1",
+		"@types/node": "^18.7.18",
+		"@types/react": "^18.0.20",
+		"@types/react-dom": "^18.0.6",
+		"@vitejs/plugin-react": "^2.1.0",
+		"eslint": "^8.23.1",
+		"prettier": "^2.7.1",
+		"typescript": "^4.8.3",
+		"vite": "^3.1.3"
+	}
 }
