--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@vercel/analytics": "^1.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-fitty": "^1.0.1",
-		"zustand": "^4.3.9"
+		"zustand": "^4.4.3"
 	},
 	"devDependencies": {
 		"@mheob/eslint-config": "^5.1.0",
 		"@mheob/prettier-config": "^3.1.0",
 		"@mheob/tsconfig": "^2.0.0",
-		"@types/node": "^20.4.5",
-		"@types/react": "^18.2.17",
-		"@types/react-dom": "^18.2.7",
-		"@vitejs/plugin-react": "^4.0.3",
-		"eslint": "^8.45.0",
-		"prettier": "^3.0.0",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.7"
+		"@types/node": "^20.8.3",
+		"@types/react": "^18.2.25",
+		"@types/react-dom": "^18.2.11",
+		"@vitejs/plugin-react": "^4.1.0",
+		"eslint": "^8.51.0",
+		"prettier": "^3.0.3",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.11"
 	}
 }
