--- a/package.json
+++ b/package.json
@@ -8,27 +8,31 @@
 		"build": "tsc && vite build",
 		"dev": "vite",
 		"format": "prettier --write \"**/*.{cjs,js,jsx,ts,tsx,json,md,mdx,yml}\"",
-		"lint": "eslint src/**/*.{ts,tsx} --fix",
+		"lint": "eslint . --fix",
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@vercel/analytics": "^1.4.1",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
+		"@vercel/analytics": "^1.5.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"react-fitty": "^1.0.1",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@mheob/eslint-config": "^5.2.0",
+		"@eslint-react/eslint-plugin": "^1.32.0",
+		"@mheob/eslint-config": "^8.2.0",
 		"@mheob/prettier-config": "^3.3.3",
 		"@mheob/tsconfig": "^2.2.1",
-		"@types/node": "^20.17.14",
-		"@types/react": "^18.3.18",
-		"@types/react-dom": "^18.3.5",
+		"@types/node": "^22.13.10",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
-		"eslint": "^8.57.1",
-		"prettier": "^3.4.2",
-		"typescript": "^5.7.3",
-		"vite": "^5.4.11"
-	}
+		"eslint": "^9.22.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"prettier": "^3.5.3",
+		"typescript": "^5.8.2",
+		"vite": "^6.2.1"
+	},
+	"packageManager": "pnpm@10.6.2"
 }
